--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
+        "test": "jest --runInBand",
+        "test:watch": "jest --watch --runInBand",
+        "test:cov": "jest --coverage --runInBand",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json --runInBand"
     },
     "dependencies": {
+        "@mikro-orm/core": "^5.7.12",
+        "@mikro-orm/mysql": "^5.7.12",
+        "@mikro-orm/nestjs": "^5.2.0",
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
@@ -29,6 +32,7 @@
         "uuid": "^10.0.0"
     },
     "devDependencies": {
+        "@mikro-orm/cli": "^5.7.12",
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
