--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
         "test:e2e": "jest --config ./test/jest-e2e.json --runInBand"
     },
     "dependencies": {
+        "@golevelup/nestjs-rabbitmq": "^5.4.0",
         "@mikro-orm/core": "^5.7.12",
         "@mikro-orm/mysql": "^5.7.12",
         "@mikro-orm/nestjs": "^5.2.0",
+        "@nestjs/bull": "^10.2.1",
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
+        "bull": "^4.16.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "eventemitter2": "^6.4.9",
